--- a/life_exp_analysis.qmd
+++ b/life_exp_analysis.qmd
@@ -13,4 +13,16 @@ library(tidyverse)
 
 Here, I re-examine the analysis of Oeppen and Vaupel (2002).
 
-# Analysis
+# Life Expectancy Analysis
+
+```{r}
+library(tidyverse)
+gapminder::gapminder_unfiltered  |> 
+  group_by(year) |>
+  filter(lifeExp == max(lifeExp)) |>
+  ungroup() |>
+  select(year, country, lifeExp) |>
+  arrange(year) ->
+  sumdat
+```
+
