--- a/life_exp_analysis.qmd
+++ b/life_exp_analysis.qmd
@@ -15,6 +15,8 @@ Here, I re-examine the analysis of Oeppen and Vaupel (2002).
 
 # Life Expectancy Analysis
 
+Here is some text for this analysis.
+
 ```{r}
 library(tidyverse)
 gapminder::gapminder_unfiltered  |> 
