added intro text

--- a/life_exp_analysis.qmd
+++ b/life_exp_analysis.qmd
@@ -15,7 +15,7 @@ Here, I re-examine the analysis of Oeppen and Vaupel (2002).
 
 # Life Expectancy Analysis
 
-Here is some text for this analysis.
+Here is the code to organize the data for analysis.
 
 ```{r}
 library(tidyverse)
