create RStudio project with more text

--- a/life_exp_analysis.qmd
+++ b/life_exp_analysis.qmd
@@ -17,6 +17,8 @@ Here, I re-examine the analysis of Oeppen and Vaupel (2002).
 
 Here is the code to organize the data for analysis.
 
+Here is even more text about it.
+
 ```{r}
 library(tidyverse)
 gapminder::gapminder_unfiltered  |> 
@@ -27,4 +29,3 @@ gapminder::gapminder_unfiltered  |>
   arrange(year) ->
   sumdat
 ```
-
