--- a/life_exp_analysis.qmd
+++ b/life_exp_analysis.qmd
@@ -19,6 +19,8 @@ Here is the code to organize the data for analysis.
 
 Here is even more text about it.
 
+and even more more text
+
 ```{r}
 library(tidyverse)
 gapminder::gapminder_unfiltered  |> 
