--- a/life_exp_analysis.qmd
+++ b/life_exp_analysis.qmd
@@ -6,6 +6,7 @@ date: today
 ---
 
 ```{r}
+#| message: false
 library(tidyverse)
 ```
 
@@ -13,16 +14,12 @@ library(tidyverse)
 
 Here, I re-examine the analysis of Oeppen and Vaupel (2002).
 
-# Life Expectancy Analysis
+The graph below provides insights into an enduring relationship between maximum Life Expectancy and birth year showing the increase in maximum life expectancy for each new generation.
 
-Here is the code to organize the data for analysis.
-
-Here is even more text about it.
-
-and even more more text
+# Analysis
 
 ```{r}
-library(tidyverse)
+#| message: false
 gapminder::gapminder_unfiltered  |> 
   group_by(year) |>
   filter(lifeExp == max(lifeExp)) |>
@@ -30,4 +27,14 @@ gapminder::gapminder_unfiltered  |>
   select(year, country, lifeExp) |>
   arrange(year) ->
   sumdat
+
+sumdat |> 
+  ggplot(aes(x = year, y = lifeExp)) +
+  geom_point(aes(color = country)) +
+  geom_point(pch = 1) +
+  theme_bw() +
+  geom_smooth(method = "lm", se = FALSE) +
+  xlab("Year") +
+  ylab("Maximum Life Expectancy") +
+  scale_color_discrete(name = "Country")
 ```
