--- a/life_exp_analysis.qmd
+++ b/life_exp_analysis.qmd
@@ -38,3 +38,5 @@ sumdat |>
   ylab("Maximum Life Expectancy") +
   scale_color_discrete(name = "Country")
 ```
+
+This is a lovely plot of life expectancies.
